<resources>
    <string name="app_name">RukigaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="submit">Submit</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_scroll_view">home scroll view</string>
    <string name="new_test">New Test</string>
    <string name="new_entry">New Diction</string>
    <string name="background_image_description">this is the background image</string>
    <string name="leankiga">LeanKiga</string>
    <string name="library">Library</string>
    <string name="quiz">Quiz</string>
    <string name="add_diction">add diction</string>
    <string name="select_category">Select Category</string>
    <string name="rukiga">Rukiga</string>
    <string name="english">English</string>
    <string name="create_diction">Create Diction</string>
    <string name="save">Save</string>
    <string name="filter">Filter</string>
    <string name="learn_kiga_title">LearnKiga</string>
    <string name="dictionary">Dictionary</string>
    <string name="profile">Profile</string>
    <string name="set_up_quiz">Set Up Quiz</string>
    <string name="start">Start</string>
    <string name="select_type">Select Type</string>
    <string name="select_number_of_questions">Select Number Of Questions</string>
    <string name="new_quiz">New Quiz</string>
    <string name="do_you_want_to_type_out_answers">Do You Want To Type Out Answers</string>
    <string name="select">Select</string>
    <string name="quiz_title">Quiz</string>
    <string name="question_progress">Question 1/10</string>
    <string name="question_text">What is the tallest mountain in Africa?</string>
    <string name="answer_hint">Type your answer here</string>
    <string name="skip_button">Skip</string>
    <string name="next_button">Next</string>
    <string name="wrong_button">Wrong</string>
    <string name="back_button_desc">Navigate back</string>
    <string name="close_button_desc">Close quiz</string>
    <!-- Quiz Setup Dialog Strings -->
    <string name="quiz_type">Quiz Type</string>
    <string name="select_quiz_type">Select quiz type</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="eg_10">e.g. 10</string>
    <string name="typed">Typed</string>
    <string name="cancel">Cancel</string>
    <string name="type_here">Type Here</string>
    <string name="edit_title">Edit Title</string>
    <string name="filter_dictionary">Filter Dictionary</string>
    <string name="finish">Finish</string>
    <string name="no_quiz_results">No quiz results.\nStart new quiz</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="email_address">Email address</string>
    <string name="email_hint">name@example.com</string>
    <string name="create_password">Create a password</string>
    <string name="my_profile">My Profile</string>
    <string name="tap_to_edit_avatar">Tap to edit avatar</string>
    <string name="username">Username</string>
    <string name="change_email_hint">To change your email, please contact support.</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <string name="avatar_description">Portrait of a person representing the user avatar</string>
    <string name="back_button">Back</string>
    <string name="settings_button">Settings</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="edit_username">Edit username</string>
    <string name="email_locked">Email is locked</string>

    <string name="default_web_client_id">26137426620-l15vnvf8mha3k1vpvch9d0ccujnsdemi.apps.googleusercontent.com</string>
    <string name="search_word">Search for a word...</string>
    <string name="search_icon">Search Icon</string>

</resources>