<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/list_ul_alt"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/quiz_submissions3"
            android:title="@string/quiz" />
    </group>
    <item android:title="">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="Logout" />
            </group>
        </menu>
    </item>

</menu>