<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardMaxElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/createDialogHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/set_up_quiz"
            android:textAllCaps="true"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectCategory"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/select_category"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/createDialogHeader"
            app:layout_constraintStart_toStartOf="@+id/createDialogHeader"
            app:layout_constraintTop_toBottomOf="@+id/createDialogHeader">

            <AutoCompleteTextView
                android:id="@+id/selectCategoryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="none"
                android:textColor="@android:color/primary_text_light"
                app:layout_constraintStart_toStartOf="@+id/editRukiga"
                app:layout_constraintTop_toBottomOf="@+id/editRukiga" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectQuestionNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/select_number_of_questions"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/selectCategory"
            app:layout_constraintStart_toStartOf="@+id/selectCategory"
            app:layout_constraintTop_toBottomOf="@+id/selectCategory"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp">
            <AutoCompleteTextView
                android:id="@+id/selectQuestionNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="@color/white"
                android:textColor="@android:color/primary_text_light"
                app:layout_constraintStart_toStartOf="@+id/editRukiga"
                app:layout_constraintTop_toBottomOf="@+id/editRukiga" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectWritten"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/select_type"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/selectQuestionNumber"
            app:layout_constraintStart_toStartOf="@+id/selectQuestionNumber"
            app:layout_constraintTop_toBottomOf="@+id/selectQuestionNumber"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp">
            <AutoCompleteTextView
                android:id="@+id/selectWrittenTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="@color/white"
                android:textColor="@android:color/primary_text_light"
                app:layout_constraintStart_toStartOf="@+id/editRukiga"
                app:layout_constraintTop_toBottomOf="@+id/editRukiga" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toTopOf="@+id/cancelButton" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectWritten" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>